--- a/docs/consentform.tex
+++ b/docs/consentform.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt,british,usenames,dvipsnames,hypens,final]{scrartcl}
 %% Page setup
 \usepackage[a4paper]{geometry}
-\geometry{verbose,tmargin=2cm,bmargin=1.5cm,lmargin=2cm,rmargin=2cm,headheight=3cm,headsep=0.5cm,footskip=1.5cm}
+\geometry{verbose,tmargin=1.8cm,bmargin=1.5cm,lmargin=2cm,rmargin=2cm,headheight=3cm,headsep=0.5cm,footskip=1.5cm}
 \usepackage[unicode=true,
  bookmarks=true,bookmarksnumbered=true,bookmarksopen=true,bookmarksopenlevel=1,
  breaklinks=false,pdfborder={0 0 0},backref=false,colorlinks=false]
@@ -75,14 +75,14 @@
 
 The aim of this study is to determine whether using steganographic methods to hide data in video files results in visible changes to the video. The experiment will be conducted as follows.
 
-In each trial, you will be given a pair of ostensibly identical videos, one of which has been modified to contain a hidden payload. You will have full control of the playback, which means you can watch videos however you like: sequentially, side-by-side, replay certain parts, etc. You will have to choose which video you think was modified and write its letter (\textsb{A} or \textsb{B}) into the answer box corresponding to the current trial at the bottom of this page. There will be 10 trials in total and the length of each video is up to 30 seconds. 
+In each trial, you will be given three ostensibly identical videos, one of which has been modified to contain a hidden payload. You will have full control of the playback, which means you can watch videos however you like: sequentially, side-by-side, replay certain parts, etc. You will have to choose which video you think was modified and write its letter (\textsb{A}, \textsb{B} or \textsb{C}) into the answer box corresponding to the current trial at the bottom of this page. There will be 10 trials in total and the length of each video is up to 30 seconds. 
 
 \subsubsection*{Disclaimer}
 
 Please note that none of the tasks is a test of your personal intelligence or ability. The objective is to test the quality of output produced by the system. Your answers are anonymous and no personal data is collected, which means that you can't be identified using the answers you provide. If interested, you can obtain a copy of trial videos and the correct classification after submitting your answers. Ask the researcher in person or email \texttt{el398@cam.ac.uk}.
 
 {%
-\vspace{-0.1cm}
+\vspace{-0.2cm}
 \smallskip
 \cuthere\\
 \medskip
@@ -92,7 +92,7 @@ Please note that none of the tasks is a test of your personal intelligence or ab
 
 
 \subsubsection*{Answer Box}
-Each column of the answer table corresponds to the trial. Please write \textsb{A} or \textsb{B} to indicate which video, you think, contains hidden payload.
+Each column of the answer table corresponds to the trial. Please write \textsb{A},  \textsb{B} or \textsb{C} to indicate which video, you think, contains hidden payload.
 
 {%
 \centering
@@ -109,12 +109,12 @@ Each column of the answer table corresponds to the trial. Please write \textsb{A
 }
 
 \subsubsection*{Record of Consent}
-Your signature below indicates that you have understood the information about the visual (in-)distinguishability of video steganography experiment and consent to your participation. The participation is voluntary and you may refuse to answer certain questions on the questionnaire and withdraw from the study at any time with no penalty. This does not waive your legal rights. You should have received a copy of the consent form for your own record. If you have further questions related to this research, please contact the researcher.
+Your signature below indicates that you have understood the information about the visual (in-)distinguishability of video steganography experiment and consent to your participation. The participation is voluntary and you may refuse to answer certain questions on the questionnaire and withdraw from the study at any time with no penalty without giving a reason. This does not waive your legal rights. You should have received a copy of the consent form for your own record. If you have further questions related to this research, please contact the researcher.
 
-\vspace{0.5cm}
+\vspace{0.4cm}
 \SignatureAndDate{Participant}
 
-\vspace{0.3cm}
+\vspace{0.2cm}
 \SignatureAndDate{Researcher}
 
 \end{document}
